--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>K R I ϟ ϟ H</title>
   </head>
 
   <body>
+    <noscript>
+      JavaScript is disabled in your browser. You need to enable JavaScript to run this app.
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/root.tsx"></script>
   </body>
