--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
@@ -8,8 +9,11 @@
 	</head>
 
 	<body>
-		<noscript> JavaScript is disabled in your browser. You need to enable JavaScript to run this app. </noscript>
+		<noscript>
+			JavaScript is disabled in your browser. You need to enable JavaScript to run this app.
+		</noscript>
 		<div id="root"></div>
-		<script type="module" src="/src/root.tsx"></script>
+		<script type="module" src="/src/shell.tsx"></script>
 	</body>
+
 </html>
